--- a/TitanicKaggle.ipynb
+++ b/TitanicKaggle.ipynb
@@ -1497,13 +1497,7 @@
       "891/891 [==============================] - 1s 797us/step - loss: 0.4266 - acc: 0.8103\n",
       "Epoch 82/400\n",
       "891/891 [==============================] - 1s 836us/step - loss: 0.4144 - acc: 0.8148\n",
-      "Epoch 83/400\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 83/400\n",
       "891/891 [==============================] - 1s 760us/step - loss: 0.4163 - acc: 0.8137\n",
       "Epoch 84/400\n",
       "891/891 [==============================] - 1s 828us/step - loss: 0.4194 - acc: 0.8114\n",
@@ -1837,13 +1831,7 @@
       "891/891 [==============================] - 1s 870us/step - loss: 0.3897 - acc: 0.8272\n",
       "Epoch 246/400\n",
       "891/891 [==============================] - 1s 913us/step - loss: 0.3905 - acc: 0.8227\n",
-      "Epoch 247/400\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 247/400\n",
       "891/891 [==============================] - 1s 814us/step - loss: 0.3918 - acc: 0.8215\n",
       "Epoch 248/400\n",
       "891/891 [==============================] - 1s 802us/step - loss: 0.3948 - acc: 0.8294\n",
@@ -3870,7 +3858,7 @@
    ],
    "source": [
     "from datetime import datetime\n",
-    "archivo = 'Titanic01_'+ str(datetime.now().strftime('%Y-%m-%d'))+'.csv'\n",
+    "archivo = 'TitanicTensonFlow_'+ str(datetime.now().strftime('%Y-%m-%d'))+'.csv'\n",
     "\n",
     "toKaggle.to_csv(archivo,index=False)\n",
     "\n",
