TensorFlow with .75 accurancy

--- a/KaggleChallengeTensorFlow.ipynb
+++ b/KaggleChallengeTensorFlow.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/AngelCueto/anaconda3/lib/python3.6/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "  from ._conv import register_converters as _register_converters\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -30,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +201,7 @@
        "9           10         1       2  female  14.0      1      0"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1164,7 +1172,7 @@
        "       [0]])"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1181,7 +1189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1196,7 +1204,7 @@
        "       [ 3.        , 24.04425837,  1.        ]])"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1208,7 +1216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1223,12 +1231,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "class NeuronalNet(object):\n",
-    "    def __init__(self, sess, X, Y, n_hidden=20, learning_rate=1e-2, layers=7):\n",
+    "    def __init__(self, sess, X, Y, n_hidden=20, learning_rate=1e-2, layers=5):\n",
     "        self.sess = sess #Sesión para correr TensorFlow\n",
     "        self.X = X # Entradas\n",
     "        self.Y = Y.reshape(-1,1) #Salidas\n",
@@ -1320,7 +1328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1336,7 +1344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1356,15 +1364,21 @@
       " [0]\n",
       " [0]\n",
       " [0]\n",
+      " [1]\n",
       " [0]\n",
+      " [1]\n",
+      " [1]\n",
       " [0]\n",
       " [0]\n",
       " [0]\n",
       " [0]\n",
       " [0]\n",
       " [0]\n",
+      " [1]\n",
       " [0]\n",
+      " [1]\n",
       " [0]\n",
+      " [1]\n",
       " [0]\n",
       " [0]\n",
       " [0]\n",
@@ -1381,31 +1395,41 @@
       " [0]\n",
       " [0]\n",
       " [0]\n",
+      " [1]\n",
+      " [1]\n",
       " [0]\n",
       " [0]\n",
       " [0]\n",
+      " [1]\n",
       " [0]\n",
       " [0]\n",
       " [0]\n",
+      " [1]\n",
+      " [1]\n",
       " [0]\n",
       " [0]\n",
       " [0]\n",
       " [0]\n",
       " [0]\n",
+      " [1]\n",
       " [0]\n",
       " [0]\n",
       " [0]\n",
       " [0]\n",
       " [0]\n",
+      " [1]\n",
       " [0]\n",
       " [0]\n",
       " [0]\n",
+      " [1]\n",
       " [0]\n",
       " [0]\n",
       " [0]\n",
       " [0]\n",
+      " [1]\n",
       " [0]\n",
       " [0]\n",
+      " [1]\n",
       " [0]\n",
       " [0]\n",
       " [0]\n",
@@ -1420,12 +1444,15 @@
       " [0]\n",
       " [0]\n",
       " [0]\n",
+      " [1]\n",
       " [0]\n",
       " [0]\n",
       " [0]\n",
+      " [1]\n",
       " [0]\n",
       " [0]\n",
       " [0]\n",
+      " [1]\n",
       " [0]\n",
       " [0]\n",
       " [0]\n",
@@ -1437,11 +1464,17 @@
       " [0]\n",
       " [0]\n",
       " [0]\n",
+      " [1]\n",
       " [0]\n",
+      " [1]\n",
       " [0]\n",
       " [0]\n",
+      " [1]\n",
       " [0]\n",
+      " [1]\n",
+      " [1]\n",
       " [0]\n",
+      " [1]\n",
       " [0]\n",
       " [0]\n",
       " [0]\n",
@@ -1460,6 +1493,7 @@
       " [0]\n",
       " [0]\n",
       " [0]\n",
+      " [1]\n",
       " [0]\n",
       " [0]\n",
       " [0]\n",
@@ -1468,32 +1502,43 @@
       " [0]\n",
       " [0]\n",
       " [0]\n",
+      " [1]\n",
       " [0]\n",
       " [0]\n",
       " [0]\n",
       " [0]\n",
       " [0]\n",
+      " [1]\n",
       " [0]\n",
       " [0]\n",
       " [0]\n",
       " [0]\n",
       " [0]\n",
+      " [1]\n",
       " [0]\n",
       " [0]\n",
       " [0]\n",
       " [0]\n",
       " [0]\n",
+      " [1]\n",
       " [0]\n",
       " [0]\n",
       " [0]\n",
       " [0]\n",
       " [0]\n",
       " [0]\n",
+      " [1]\n",
+      " [1]\n",
       " [0]\n",
+      " [1]\n",
+      " [1]\n",
       " [0]\n",
       " [0]\n",
+      " [1]\n",
       " [0]\n",
+      " [1]\n",
       " [0]\n",
+      " [1]\n",
       " [0]\n",
       " [0]\n",
       " [0]\n",
@@ -1508,40 +1553,56 @@
       " [0]\n",
       " [0]\n",
       " [0]\n",
+      " [1]\n",
       " [0]\n",
+      " [1]\n",
       " [0]\n",
       " [0]\n",
       " [0]\n",
       " [0]\n",
+      " [1]\n",
       " [0]\n",
       " [0]\n",
       " [0]\n",
       " [0]\n",
+      " [1]\n",
       " [0]\n",
       " [0]\n",
       " [0]\n",
       " [0]\n",
+      " [1]\n",
       " [0]\n",
+      " [1]\n",
       " [0]\n",
+      " [1]\n",
       " [0]\n",
+      " [1]\n",
       " [0]\n",
       " [0]\n",
       " [0]\n",
       " [0]\n",
       " [0]\n",
       " [0]\n",
+      " [1]\n",
       " [0]\n",
       " [0]\n",
       " [0]\n",
       " [0]\n",
       " [0]\n",
       " [0]\n",
+      " [1]\n",
+      " [1]\n",
+      " [1]\n",
+      " [1]\n",
       " [0]\n",
       " [0]\n",
       " [0]\n",
       " [0]\n",
+      " [1]\n",
       " [0]\n",
+      " [1]\n",
       " [0]\n",
+      " [1]\n",
       " [0]\n",
       " [0]\n",
       " [0]\n",
@@ -1549,9 +1610,12 @@
       " [0]\n",
       " [0]\n",
       " [0]\n",
+      " [1]\n",
       " [0]\n",
       " [0]\n",
       " [0]\n",
+      " [1]\n",
+      " [1]\n",
       " [0]\n",
       " [0]\n",
       " [0]\n",
@@ -1560,8 +1624,10 @@
       " [0]\n",
       " [0]\n",
       " [0]\n",
+      " [1]\n",
       " [0]\n",
       " [0]\n",
+      " [1]\n",
       " [0]\n",
       " [0]\n",
       " [0]\n",
@@ -1582,6 +1648,7 @@
       " [0]\n",
       " [0]\n",
       " [0]\n",
+      " [1]\n",
       " [0]\n",
       " [0]\n",
       " [0]\n",
@@ -1590,6 +1657,7 @@
       " [0]\n",
       " [0]\n",
       " [0]\n",
+      " [1]\n",
       " [0]\n",
       " [0]\n",
       " [0]\n",
@@ -1598,6 +1666,7 @@
       " [0]\n",
       " [0]\n",
       " [0]\n",
+      " [1]\n",
       " [0]\n",
       " [0]\n",
       " [0]\n",
@@ -1607,10 +1676,13 @@
       " [0]\n",
       " [0]\n",
       " [0]\n",
+      " [1]\n",
       " [0]\n",
+      " [1]\n",
       " [0]\n",
       " [0]\n",
       " [0]\n",
+      " [1]\n",
       " [0]\n",
       " [0]\n",
       " [0]\n",
@@ -1623,27 +1695,39 @@
       " [0]\n",
       " [0]\n",
       " [0]\n",
+      " [1]\n",
       " [0]\n",
       " [0]\n",
       " [0]\n",
       " [0]\n",
       " [0]\n",
+      " [1]\n",
+      " [1]\n",
       " [0]\n",
       " [0]\n",
       " [0]\n",
+      " [1]\n",
       " [0]\n",
+      " [1]\n",
       " [0]\n",
       " [0]\n",
       " [0]\n",
       " [0]\n",
+      " [1]\n",
+      " [1]\n",
       " [0]\n",
+      " [1]\n",
       " [0]\n",
       " [0]\n",
       " [0]\n",
+      " [1]\n",
       " [0]\n",
       " [0]\n",
+      " [1]\n",
       " [0]\n",
       " [0]\n",
+      " [1]\n",
+      " [1]\n",
       " [0]\n",
       " [0]\n",
       " [0]\n",
@@ -1653,18 +1737,24 @@
       " [0]\n",
       " [0]\n",
       " [0]\n",
+      " [1]\n",
       " [0]\n",
       " [0]\n",
       " [0]\n",
       " [0]\n",
       " [0]\n",
+      " [1]\n",
       " [0]\n",
       " [0]\n",
       " [0]\n",
+      " [1]\n",
       " [0]\n",
+      " [1]\n",
       " [0]\n",
       " [0]\n",
+      " [1]\n",
       " [0]\n",
+      " [1]\n",
       " [0]\n",
       " [0]\n",
       " [0]\n",
@@ -1673,92 +1763,10 @@
       " [0]\n",
       " [0]\n",
       " [0]\n",
+      " [1]\n",
       " [0]\n",
       " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
+      " [1]\n",
       " [0]\n",
       " [0]\n",
       " [0]]\n"
@@ -1767,11 +1775,11 @@
    ],
    "source": [
     "#NO MODIFICAR\n",
-    "n_iters = 5\n",
+    "n_iters = 1000\n",
     "print(\"%d Neuronas\" % 1)\n",
     "tf.reset_default_graph() #BORRA EL GRAFO ANTERIOR EN LA SESIÓN\n",
     "sess = tf.Session() #SESIÓN DE TENSORFLOW\n",
-    "net = NeuronalNet(sess, X_train, y_train, n_hidden=10)\n",
+    "net = NeuronalNet(sess, X_train, y_train, n_hidden=8)\n",
     "\n",
     "cost = getTrainCost(net, n_iters) #COSTO DEL MODELO\n",
     "pred_prob = net.predict(X_test) #PROBABILIDADES DE LA PREDICCIÓN\n",
@@ -1786,7 +1794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1892,7 +1900,7 @@
        "      <th>12</th>\n",
        "      <td>904</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
@@ -1904,13 +1912,13 @@
        "      <th>14</th>\n",
        "      <td>906</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
        "      <td>907</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
@@ -1952,7 +1960,7 @@
        "      <th>22</th>\n",
        "      <td>914</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>23</th>\n",
@@ -1964,7 +1972,7 @@
        "      <th>24</th>\n",
        "      <td>916</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25</th>\n",
@@ -1976,7 +1984,7 @@
        "      <th>26</th>\n",
        "      <td>918</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>27</th>\n",
@@ -2024,7 +2032,7 @@
        "      <th>391</th>\n",
        "      <td>1283</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>392</th>\n",
@@ -2048,7 +2056,7 @@
        "      <th>395</th>\n",
        "      <td>1287</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>396</th>\n",
@@ -2060,7 +2068,7 @@
        "      <th>397</th>\n",
        "      <td>1289</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>398</th>\n",
@@ -2078,7 +2086,7 @@
        "      <th>400</th>\n",
        "      <td>1292</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>401</th>\n",
@@ -2090,7 +2098,7 @@
        "      <th>402</th>\n",
        "      <td>1294</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>403</th>\n",
@@ -2144,7 +2152,7 @@
        "      <th>411</th>\n",
        "      <td>1303</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>412</th>\n",
@@ -2162,7 +2170,7 @@
        "      <th>414</th>\n",
        "      <td>1306</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>415</th>\n",
@@ -2201,21 +2209,21 @@
        "9            901         0      0\n",
        "10           902         0      0\n",
        "11           903         0      0\n",
-       "12           904         1      0\n",
+       "12           904         1      1\n",
        "13           905         0      0\n",
-       "14           906         1      0\n",
-       "15           907         1      0\n",
+       "14           906         1      1\n",
+       "15           907         1      1\n",
        "16           908         0      0\n",
        "17           909         0      0\n",
        "18           910         1      0\n",
        "19           911         1      0\n",
        "20           912         0      0\n",
        "21           913         0      0\n",
-       "22           914         1      0\n",
+       "22           914         1      1\n",
        "23           915         0      0\n",
-       "24           916         1      0\n",
+       "24           916         1      1\n",
        "25           917         0      0\n",
-       "26           918         1      0\n",
+       "26           918         1      1\n",
        "27           919         0      0\n",
        "28           920         0      0\n",
        "29           921         0      0\n",
@@ -2223,18 +2231,18 @@
        "388         1280         0      0\n",
        "389         1281         0      0\n",
        "390         1282         0      0\n",
-       "391         1283         1      0\n",
+       "391         1283         1      1\n",
        "392         1284         0      0\n",
        "393         1285         0      0\n",
        "394         1286         0      0\n",
-       "395         1287         1      0\n",
+       "395         1287         1      1\n",
        "396         1288         0      0\n",
-       "397         1289         1      0\n",
+       "397         1289         1      1\n",
        "398         1290         0      0\n",
        "399         1291         0      0\n",
-       "400         1292         1      0\n",
+       "400         1292         1      1\n",
        "401         1293         0      0\n",
-       "402         1294         1      0\n",
+       "402         1294         1      1\n",
        "403         1295         0      0\n",
        "404         1296         0      0\n",
        "405         1297         0      0\n",
@@ -2243,10 +2251,10 @@
        "408         1300         1      0\n",
        "409         1301         1      0\n",
        "410         1302         1      0\n",
-       "411         1303         1      0\n",
+       "411         1303         1      1\n",
        "412         1304         1      0\n",
        "413         1305         0      0\n",
-       "414         1306         1      0\n",
+       "414         1306         1      1\n",
        "415         1307         0      0\n",
        "416         1308         0      0\n",
        "417         1309         0      0\n",
@@ -2254,7 +2262,7 @@
        "[418 rows x 3 columns]"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2269,7 +2277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -2336,7 +2344,7 @@
        "4          896         0"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2350,25 +2358,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Creado: TitanicTensonFlow_2018-10-29.csv\n"
+      "Creado: TitanicTensonFlowFinal_2018-10-29.csv\n"
      ]
     }
    ],
    "source": [
     "from datetime import datetime\n",
-    "archivo = 'TitanicTensonFlow_'+ str(datetime.now().strftime('%Y-%m-%d'))+'.csv'\n",
+    "archivo = 'TitanicTensonFlowFinal_'+ str(datetime.now().strftime('%Y-%m-%d'))+'.csv'\n",
     "\n",
     "toKaggle.to_csv(archivo,index=False)\n",
     "\n",
     "print('Creado: ' + archivo)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
